[package]
name = "os2omf"
version = "0.1.1"
edition = "2024"
authors = ["CoffeeLake (atolstopyatov2017@vk.com)"]
description = "This crate provides specification of legacy formats which was used in OS/2 different versions"
license = "Apache-2.0 OR MIT"

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }